<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="tweet">Tweet</string>
    <string name="compose">Compose</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="first_image_desc">First image stored in tweet</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="likes">Likes</string>
    <string name="retweets">Retweets</string>
    <string name="like_button">Like button</string>
    <string name="retweet_symbol">Retweet symbol</string>

</resources>