<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TweetDetailsActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDetLikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvDetRetweetText"
        app:layout_constraintTop_toTopOf="@+id/tvDetRetweetCount"
        tools:text="10K" />

    <TextView
        android:id="@+id/tvDetLikeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/likes"
        app:layout_constraintStart_toEndOf="@+id/tvDetLikeCount"
        app:layout_constraintTop_toTopOf="@+id/tvDetRetweetCount" />

    <ImageView
        android:id="@+id/ivDetProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDetDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/ivDetProfileImage"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivDetProfileImage"
        app:layout_constraintTop_toTopOf="@+id/ivDetProfileImage"
        tools:text="Example Display Name" />

    <TextView
        android:id="@+id/tvDetScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvDetDisplayName"
        android:singleLine="true"
        android:textColor="@color/medium_gray"
        app:layout_constraintStart_toStartOf="@+id/tvDetDisplayName"
        app:layout_constraintTop_toBottomOf="@+id/tvDetDisplayName"
        tools:text="examplehandle" />

    <TextView
        android:id="@+id/tvDetAbsoluteTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/tvDetScreenName"
        android:singleLine="true"
        android:textColor="@color/medium_gray"
        app:layout_constraintStart_toStartOf="@+id/ivDetProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/ivDetFirstPhoto"
        tools:text="5:51PM · 12/10/18" />

    <TextView
        android:id="@+id/tvDetBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetScreenName"
        android:layout_alignStart="@+id/tvDetDisplayName"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvDetDisplayName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetProfileImage"
        tools:text="This is a content of a tweet" />

    <ImageView
        android:id="@+id/ivDetFirstPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetBody"
        android:layout_alignStart="@+id/tvDetBody"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/first_image_desc"
        app:layout_constraintEnd_toEndOf="@+id/tvDetDisplayName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDetBody"
        app:layout_constraintTop_toBottomOf="@+id/tvDetBody"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/tvDetDisplayName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ivDetProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvDetAbsoluteTime" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/tvDetDisplayName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ivDetProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvDetRetweetCount" />

    <TextView
        android:id="@+id/tvDetRetweetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivDetProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="9K" />

    <TextView
        android:id="@+id/tvDetRetweetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/retweets"
        app:layout_constraintStart_toEndOf="@+id/tvDetRetweetCount"
        app:layout_constraintTop_toTopOf="@+id/tvDetRetweetCount" />

    <ImageButton
        android:id="@+id/ibDetLike"
        android:layout_width="37dp"
        android:layout_height="38dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@string/like_button"
        android:tint="@color/medium_gray"
        app:layout_constraintStart_toStartOf="@+id/ivDetProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/ic_vector_heart_stroke" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>